--- a/ChromeExtensionProjectRadioPlayer/ChromeExtensionProjectRadioPlayer/app/popup.html
+++ b/ChromeExtensionProjectRadioPlayer/ChromeExtensionProjectRadioPlayer/app/popup.html
@@ -63,6 +63,7 @@
         </div>
         <div class="controlContent">
             <div class="fs1">
+                <i id="btnMute" class="icon-volume-medium" title="Mute"></i>
                 <i id="btnReload" class="icon-loop" title="Reload extension."></i>
             </div>
         </div>
